// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Rating /> renders default 1`] = `
<Text
  large={false}
  micro={false}
  small={false}
>
  <div
    className="ratingContainer_au0dw8"
  >
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-0"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-1"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-2"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-3"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-4"
      size="1.15em"
    />
  </div>
</Text>
`;

exports[`<Rating /> renders large 1`] = `
<Text
  large={true}
  micro={false}
  small={false}
>
  <div
    className="ratingContainer_au0dw8-o_O-ratingContainer_large_1al5d6z"
  >
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-0"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-1"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-2"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-3"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-4"
      size="1.15em"
    />
  </div>
</Text>
`;

exports[`<Rating /> renders micro 1`] = `
<Text
  large={false}
  micro={true}
  small={false}
>
  <div
    className="ratingContainer_au0dw8-o_O-ratingContainer_micro_l5dkxe"
  >
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-0"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-1"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-2"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-3"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-4"
      size="1.15em"
    />
  </div>
</Text>
`;

exports[`<Rating /> renders reviews 1`] = `
<Text
  large={false}
  micro={false}
  small={false}
>
  <div
    className="ratingContainer_au0dw8"
  >
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-0"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-1"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-2"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-3"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-4"
      size="1.15em"
    />
    <Spacing
      left={0.5}
    >
      100
    </Spacing>
  </div>
</Text>
`;

exports[`<Rating /> renders small 1`] = `
<Text
  large={false}
  micro={false}
  small={true}
>
  <div
    className="ratingContainer_au0dw8-o_O-ratingContainer_small_9f436v"
  >
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-0"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-1"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-2"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-3"
      size="1.15em"
    />
    <IconStar
      color="#C2C2C2"
      decorative={true}
      key="star-4"
      size="1.15em"
    />
  </div>
</Text>
`;
